# adaptor

./: CMakeLists.txt  calc-colours.py  calc_extents.py  capture.py  display.py  get-screen.py  get_screen.py
src/: CMakeLists.txt  colours.cpp  colours.hpp  main.cpp  main.cxx  project.cpp  project.hpp  screen-windows.cpp  screen-windows.hpp  screen.hpp  transforms.cpp  transforms.hpp  utils.cpp  utils.hpp
